popup.html의 기본 기능 작성

--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Velog Highlighter</title>
 </head>
 <body>
-    
+    <h3>텍스트 색상 설정</h3>
+    <label for="textColor">글자 색상:</label>
+    <input type="color" id="textColor" value="#000000">
+
+    <h3>배경 색상 설정</h3>
+    <label for="bgColor">배경 색상:</label>
+    <input type="color" id="bgColor" value="#ffffff">
+
+    <button id="applyBtn">적용</button>
+
+    <script src="popup.js"></script>   
 </body>
 </html>
